# Connect4-Rust-Server

server/: Cargo.toml
server/src/: board_me.rs  interface_me.rs  main.rs  minimax_me.rs
