[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.30", features = ["sink", "std"] }
http = "1.0.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-websockets = { version = "0.7.0", features = ["client", "fastrand", "server", "sha1_smol"] }
serde = { version = "1.0", features = ["derive"] }
tungstenite = "*"
serde_json = "1.0"
rand = "0.7.2"
clap = "2.33.0"